--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 SAVE_MODEL_DIR/model filter=lfs diff=lfs merge=lfs -text
 SAVE_MODEL_DIR/model filter=lfs diff=lfs merge=lfs -text
+SAVE_MODEL_DIR/model filter=lfs diff=lfs merge=lfs -text
